--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Divya Mistry">
-    <title>Divya Mistry</title>
+    <meta name="author" content="Seilov Bagdaulet">
+    <title>Seilov Bagdaulet</title>
     <link href='https://fonts.googleapis.com/css?family=Lora:400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Divya Mistry</a>
+          <a class="navbar-brand" href="#">Seilov Bagdaulet</a>
         </div>
         <div class="navbar-collapse collapse" id="mynavbar">
           <!-- add items to the nav bar -->
@@ -41,15 +41,16 @@
         <!-- header text -->
         <div class="col-xs-12">
           <!-- name title -->
-          <h1>Divya Mistry</h1>
+          <h1>Seilov Bagdaulet</h1>
           <h4>I *will* bioinformatics you</h4>
           <hr>
         </div>
         <!-- social icons -->
         <div class="col-xs-12">
-          <a class="btn btn-default" href="https://twitter.com/divyamistry" target="_blank">Twitter</a>
+          <a class="btn btn-default" href="https://www.hackerrank.com/seilov_skynet" target="_blank">HackerRank</a>
           <a class="btn btn-default" href="https://linkedin.com/in/divyamistry" target="_blank">LinkedIn</a>
           <a class="btn btn-default" href="https://github.com/divyamistry" target="_blank">Github</a>
+                    <a class="btn btn-default" href="https://twitter.com/divyamistry" target="_blank">Facebook</a>
         </div>
         <!-- inspirational quote -->
         <div class="col-xs-12">
@@ -66,7 +67,7 @@
           <p>I am a student of Bioinformatics and Computational Biology. I like making science easier to use and understand. When I'm not in lab/office, I am at home listening to Bollywood tunes.</p>
         </div>
         <div class="col-xs-6"> <!-- About me - photo -->
-          <img class="img-rounded" height="250px" alt="Divya's face" src="https://lh3.googleusercontent.com/kQABk1XZ1HLRrtfkZA9tZH8WDmLgDqWIG44v-IVASL65N1hWX30">
+          <img class="img-rounded" height="250px" alt="Divya's face" src="https://cnet2.cbsistatic.com/img/WbIDMaD6bPQgqHrwITUe5HBx5lo=/756x567/2019/11/19/2eddb56d-56a3-4569-874e-32cd61180d6a/babyyoda2.jpg">
         </div>
       </div>
       <div class="row" id="now">
@@ -99,19 +100,19 @@
       <div class="row text-center" id="contact-me">
         <!-- contact me -->
         <div class="col-xs-6"> <!-- contact me photo -->
-          <img class="img-rounded" src="https://openclipart.org/image/150px/svg_to_png/98293/1290715998.png" alt="Contact Me">
+          <img class="img-rounded" src="https://cnet2.cbsistatic.com/img/WbIDMaD6bPQgqHrwITUe5HBx5lo=/756x567/2019/11/19/2eddb56d-56a3-4569-874e-32cd61180d6a/babyyoda2.jpg" alt="Contact Me">
         </div>
         <div class="col-xs-6"> <!-- contact me text -->
           <address>
-            <strong>Divya Mistry</strong><br>
-            <a href="mailto:divyam@acm.org">divyam@acm.org</a><br>
+            <strong>Seilov Bagdaulet</strong><br>
+            <a href="mailto:seilov.skynet@gmail.com">seilov.skynet@gmail.com</a><br>
             Feel free to get in touch with me via email. I reply to all emails.<br>
             <!-- I'm on Medium at <a href="https://medium.com/@divm" title="Medium">divm</a><br> -->
           </address>
         </div>
       </div>
       <div class="col-xs-12 text-center my-footer">
-        <p>&copy; 2015. Divya Mistry</p>
+        <p>&copy; 2019. Seilov Bagdaulet</p>
       </div>
     </div>
     <!-- supporting javascript -->
