--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">Seilov Bagdaulet</a>
+          <a class="navbar-brand" href="mailto:seilov.skynet@gmail.com">seilov.skynet@gmail.com</a>
         </div>
         <div class="navbar-collapse collapse" id="mynavbar">
           <!-- add items to the nav bar -->
@@ -44,7 +45,7 @@
         <div class="col-xs-12">
           <!-- name title -->
           <h1>Seilov Bagdaulet</h1>
-          <h4>I *will* bioinformatics you</h4>
+          <h4>The computer guy</h4>
           <hr>
         </div>
         <!-- social icons -->
@@ -52,21 +53,23 @@
           <a class="btn btn-default" href="https://www.hackerrank.com/seilov_skynet" target="_blank">HackerRank</a>
           <a class="btn btn-default" href="https://linkedin.com/in/divyamistry" target="_blank">LinkedIn</a>
           <a class="btn btn-default" href="https://github.com/divyamistry" target="_blank">Github</a>
-                    <a class="btn btn-default" href="https://twitter.com/divyamistry" target="_blank">Facebook</a>
+          <a class="btn btn-default" href="https://twitter.com/divyamistry" target="_blank">Facebook</a>
         </div>
         <!-- inspirational quote -->
         <div class="col-xs-12">
           <blockquote class="blockquote-reverse my-quote">
-            <p>The fool doth think he is wise, but the wise man knows himself to be a fool.</p>
-            <footer>William Shakespeare in <cite title="As You Like It">As You Like It</cite></footer>
+            <p>Hi, My name is Bagdaulet, i am back-end developer from KazHackStan.</p>
+            <!--<footer>William Shakespeare in <cite title="As You Like It">As You Like It</cite></footer>-->
           </blockquote>
         </div>
       </div>
       <div class="row text-center" id="about-me">
         <!-- about me -->
         <div class="col-xs-6"> <!-- About me - description -->
-          <p class="lead">Consumer and Producer of Sciencey S#!t.</p>
-          <p>I am a student of Bioinformatics and Computational Biology. I like making science easier to use and understand. When I'm not in lab/office, I am at home listening to Bollywood tunes.</p>
+          <p class="h1">My work.</p>
+          <p class="h3">Currently i am working on meme sharing web resource and on my master diploma.</p>
+          <p class="h1">Skills.</p>
+          <p class="h3">spring, docker, sql, jenkins.</p>
         </div>
         <div class="col-xs-6"> <!-- About me - photo -->
           <img class="img-rounded" height="250px" alt="Divya's face" src="https://cnet2.cbsistatic.com/img/WbIDMaD6bPQgqHrwITUe5HBx5lo=/756x567/2019/11/19/2eddb56d-56a3-4569-874e-32cd61180d6a/babyyoda2.jpg">
@@ -101,13 +104,13 @@
       </div>
       <div class="row text-center" id="contact-me">
         <!-- contact me -->
-        <div class="col-xs-6"> <!-- contact me photo -->
+<!--         <div class="col-xs-6"> 
           <img class="img-rounded" src="https://cnet2.cbsistatic.com/img/WbIDMaD6bPQgqHrwITUe5HBx5lo=/756x567/2019/11/19/2eddb56d-56a3-4569-874e-32cd61180d6a/babyyoda2.jpg" alt="Contact Me">
-        </div>
-        <div class="col-xs-6"> <!-- contact me text -->
+        </div> -->
+        <div class="col-xs-12"> <!-- contact me text -->
           <address>
-            <strong>Seilov Bagdaulet</strong><br>
-            <a href="mailto:seilov.skynet@gmail.com">seilov.skynet@gmail.com</a><br>
+            <strong class="h1">Seilov Bagdaulet</strong><br>
+            <a class="h1" href="mailto:seilov.skynet@gmail.com">seilov.skynet@gmail.com</a><br>
             Feel free to get in touch with me via email. I reply to all emails.<br>
             <!-- I'm on Medium at <a href="https://medium.com/@divm" title="Medium">divm</a><br> -->
           </address>
