--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
         <!-- social icons -->
         <div class="col-xs-12">
           <a class="btn btn-default" href="https://www.hackerrank.com/seilov_skynet" target="_blank">HackerRank</a>
-          <a class="btn btn-default" href="https://linkedin.com/in/divyamistry" target="_blank">LinkedIn</a>
-          <a class="btn btn-default" href="https://github.com/divyamistry" target="_blank">Github</a>
-          <a class="btn btn-default" href="https://twitter.com/divyamistry" target="_blank">Facebook</a>
+          <a class="btn btn-default" href="https://www.linkedin.com/in/seilov-bagdaulet-623277166/" target="_blank">LinkedIn</a>
+          <a class="btn btn-default" href="https://github.com/dauletSeitov" target="_blank">Github</a>
+          <a class="btn btn-default" href="https://www.facebook.com/baha.seil" target="_blank">Facebook</a>
+		  <a class="btn btn-default" href="https://www.coursera.org/user/5e8fbb6ef7d2223517b748098c4ab657" target="_blank">Coursera</a>
         </div>
         <!-- inspirational quote -->
         <div class="col-xs-12">
@@ -72,7 +73,7 @@
           <p class="h3">spring, docker, sql, jenkins.</p>
         </div>
         <div class="col-xs-6"> <!-- About me - photo -->
-          <img class="img-rounded" height="250px" alt="Divya's face" src="https://cnet2.cbsistatic.com/img/WbIDMaD6bPQgqHrwITUe5HBx5lo=/756x567/2019/11/19/2eddb56d-56a3-4569-874e-32cd61180d6a/babyyoda2.jpg">
+          <img class="img-rounded" height="250px" alt="Daulet's face" src="1.jpg">
         </div>
       </div>
       <div class="row" id="now">
@@ -81,23 +82,25 @@
         </div>
         <div class="col-xs-6">
           <p class="lead">What I'm doing now</p>
-          <p>
-            I'm in the San Francisco Bay Area, working as a software engineer on <a href="https://en.wikipedia.org/wiki/H-1B_visa" target="_blank">some leased time from the US Government</a> and finishing my dissertation for PhD. My time is unequally divided among the following projects:
-            <ul>
-              <li>being a full-time software engineer for an <a href="https://www.salesforce.com/products/marketing-cloud/data-management/" target="_blank">awesome team</a></li>
-              <li>spending some hours finishing my <a href="https://www.linkedin.com/in/divyamistry#publications" target="_blank">dissertation and research papers</a> for my <a href="http://divyam.public.iastate.edu/" target="_blank">PhD at Iowa State University</a></li>
-              <li>keeping up with Big Data world through <a href="http://bigdatauniversity.com/courses/" target="_blank">Big Data University</a></li>
-              <li><a href="http://www.freecodecamp.com/" target="_blank">learning</a> web front-end development to make not-too-ugly web sites</li>
+          <p style="text-indent: 1.5em">Currently i am in the Almaty working as a software engineer on trading platform and finishing my dissertation for master degree. My time is unequally divided among the following projects:</p>
+			<h2>Self education:</h2>
+			<ul>
+				<li>Learing english, now i have IELTS score 5</li>
+				<li>Learning Android development on Kotlin</li>
+				<li>Learning IOS development on swift</li>
+				<li>Solving problems on HackerRank</li>
+				<li>Preparing to OSJP certification</li>
             </ul>
-            When I am not doing any of the above, I am
+            <h2>My hobby:</h2>
             <ul>
-              <li>spending time with the friends and family, eating good food and celebrating my return to California</li>
-              <li>learning about <a href="http://getsalesforcebenefits.com/your-benefits" target="_blank">health, finance, and other grown-up things</a> in life</li>
-              <li>listening to <a href="https://twitter.com/divyamistry/status/683410370057211905" target="_blank">podcasts</a></li>
-              <li>very slowly getting back into <a href="https://www.headspace.com/" target="_blank">meditation</a></li>
+              <li>Writing fun programs like worm game on C#</li>
+              <li>Developing fun stufs on micro controllers Arduino Raspbery pi</li>
+              <li>Rearding literature books</li>
+              <li>Motorsycles</li>
+              <li>Fishing</li>
             </ul>
-            All of those keep me occupied and entertained for now. I'll keep this updated as things change.
-          </p>
+            All this helps me to be motivated and keeps me alive.
+          
         </div>
         <div class="col-xs-3">
         </div>
