--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <li>Learning Android development on Kotlin</li>
                     <li>Learning IOS development on swift</li>
                     <li>Solving problems on HackerRank</li>
-                    <li>Preparing to OSJP certification</li>
+                    <li>Preparing to scjp certification</li>
                 </ul>
             </div>
             <div class="col-xs-4">
